# TrialMatchAI

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.sh  vllm_issue.txt
elasticsearch/config/es01/: elasticsearch.keystore
elasticsearch/config/es02/: elasticsearch.keystore
elasticsearch/config/es03/: elasticsearch.keystore
local_test/: README.md  run-local.sh
local_test/docker/: docker-compose.yml
local_test/docker/snapshots/: index-1
local_test/test_data/: README.md
local_test/test_data/processed_trials/: NCT00000102.json  NCT00000105.json  NCT00000108.json  NCT00000110.json  NCT00000113.json  NCT00000114.json  NCT00000115.json  NCT00000117.json  NCT00000119.json  NCT00000120.json  NCT00000121.json  NCT00000123.json  NCT00000124.json  NCT00000125.json  NCT00000126.json  NCT00000127.json  NCT00000129.json  NCT00000133.json  NCT00000137.json  NCT00000144.json  NCT00000150.json  NCT00000151.json  NCT00000152.json  NCT00000153.json  NCT00000154.json  NCT00000155.json  NCT00000156.json  NCT00000158.json  NCT00000159.json  NCT00000160.json  NCT00000161.json  NCT00000167.json  NCT00000171.json  NCT00000173.json  NCT00000176.json  NCT00000179.json  NCT00000292.json  NCT00000359.json  NCT00000361.json  NCT00000362.json  (+80 more)
scripts/: bootstrap_data.sh  index_data.sh  start_es.sh
snapshot-builder/: .processed_ids.txt  build-snapshot.sh  docker-compose.yml
source/Matcher/: main.py
source/Matcher/cli/: healthcheck.py
source/Matcher/config/: config.json  config.local.bm25.json  config.local.gemma.bm25.json  config.local.gemma.json  config.local.json  config_loader.py  settings.py
source/Matcher/pipeline/: cot_reasoning.py  cot_reasoning_vllm.py  phenopacket_processor.py  trial_ranker.py
source/Matcher/schemas/: __init__.py
source/Matcher/services/: biomedner_service.py  elasticsearch_service.py
source/Matcher/utils/: evaluation.py  gpu_log.py  logging_config.py
source/Parser/: biomedner_engine.py  normalizer.py
source/Parser/logs/: nohup_disease_normalize.out  nohup_gene_normalize.out  nohup_gner.out  nohup_multi_ner.out
source/Parser/normalizers/: cellline_normalizer.py  celltype_normalizer.py  normalizer_all.py  species_normalizer.py
tests/: conftest.py  test_config_pytest.py  test_file_utils_pytest.py  test_first_level_search_pytest.py  test_integration_es_pytest.py  test_logging.py  test_logging_pytest.py  test_phenopacket_processor_pytest.py  test_retry_pytest.py  test_schemas.py  test_search_queries.py  test_search_queries_pytest.py  test_second_level_search_pytest.py  test_settings.py  test_trial_ranker_pytest.py
utils/DataLoader/: downloader.py
utils/DataLoader/test/: test_downloader.py
utils/Indexer/: flatten.py  index_criteria.py  index_trials.py
utils/Preprocessor/: jsonify.py  preprocess_clinical_notes.py  preprocessing.py  preprocessing_utils.py  utils.py
utils/Preprocessor/test/: test_preprocessing.py
utils/finetuning/finetune_instruct/: arguments.py  data.py  data_llama.py  data_summary.py  evaluate.py  evaluate_CoT.py  evaluate_gemma2.py  (+6 more)
utils/gpt/: gpt-generate-summaries.py  gpt_generate_ideal_candidates.py  gpt_generate_reranking_data.py
vm-deployment/docs/: impl_notes.txt
vm_development/docs/: NER_docs.txt  README.md  deployment_plan.md  hpc_docs.txt  todo.todo
vm_development/scripts/: download-data.sh  start-elasticsearch.sh
vm_development/snapshot-builder/: .indexer-config.json  build-snapshot.sh  docker-compose.yml
(+37 files in other folders)
